[workspace]
resolver = "2"

members = [
    "keyvalues-serde",
    "keyvalues-parser",
]

exclude = [
    "parse-vdf-file",
]

package.categories = ["encoding", "parser-implementations", "config"]

[workspace.dependencies]
divan = { version = "0.1.14", default-features = false }
insta = "1.39.0"
pretty_assertions = "1.4.0"
serde = "1.0.209"
