[package]
name = "keyvalues-parser"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.70"

authors = ["Cosmic <CosmicHorrorDev@pm.me>"]
keywords = ["keyvalues", "vdf", "steam", "parser"]
categories.workspace = true
description = "A parser/renderer for vdf text"
homepage = "https://github.com/CosmicHorrorDev/vdf-rs/tree/main/keyvalues-parser"
repository = "https://github.com/CosmicHorrorDev/vdf-rs"

[dependencies]
# TODO: switch parsing to `nom`
pest = "2.7"
pest_derive = "2.7"

[dev-dependencies]
divan.workspace = true
insta.workspace = true
pretty_assertions.workspace = true

[[bench]]
name = "parser"
harness = false
