[package]
name = "keyvalues-parser"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80.1"

authors = ["Cosmic <CosmicHorrorDev@pm.me>"]
keywords = ["keyvalues", "vdf", "steam", "parser"]
categories.workspace = true
description = "A parser/renderer for vdf text"
homepage = "https://github.com/CosmicHorrorDev/vdf-rs/tree/main/keyvalues-parser"
repository = "https://github.com/CosmicHorrorDev/vdf-rs"

[dependencies]
pest = "2.7"

[dev-dependencies]
divan.workspace = true
insta.workspace = true
pest_generator = "2.7.15"
pretty_assertions.workspace = true
prettyplease = "0.2.37"
quote = "1.0.40"

[dev-dependencies.syn]
version = "2.0.106"
features = ["extra-traits"]

[[bench]]
name = "parser"
harness = false
