[package]
name = "keyvalues-parser"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80.1"

authors = ["Cosmic <CosmicHorrorDev@pm.me>"]
keywords = ["keyvalues", "vdf", "steam", "parser"]
categories.workspace = true
description = "A parser/renderer for vdf text"
homepage = "https://github.com/CosmicHorrorDev/vdf-rs/tree/main/keyvalues-parser"
repository = "https://github.com/CosmicHorrorDev/vdf-rs"
# benchmarking uses larger assets that end-users dont need
exclude = ["benches"]

[dependencies]
pest = "2.7"

[dependencies.serde_core]
workspace = true
optional = true

[dev-dependencies]
divan.workspace = true
insta.workspace = true
pretty_assertions.workspace = true
serde.workspace = true

[features]
# implement serde traits for some of the VDF types
serde = ["dep:serde_core"]

[[bench]]
name = "parser"
harness = false
