[package]
name = "keyvalues-serde"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.61"

authors = ["Cosmic <CosmicHorrorDev@pm.me>"]
keywords = ["keyvalues", "vdf", "steam", "serde"]
description = "(De)serialize VDF text with serde"
homepage = "https://github.com/CosmicHorrorDev/vdf-rs"
repository = "https://github.com/CosmicHorrorDev/vdf-rs"

[dependencies]
keyvalues-parser = { path = "../keyvalues-parser", version = "0.2.0" }
serde = "1.0.190"
# TODO: drop this
thiserror = "1.0.50"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
insta = "1.34.0"
maplit = "1.0.2"
pretty_assertions = "1.4.0"
serde = { version = "1.0.190", features = ["derive"] }

[[bench]]
name = "ser_de"
harness = false

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(fuzzing)"]
