[package]
name = "keyvalues-serde"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.64.0"

authors = ["Cosmic <CosmicHorrorDev@pm.me>"]
keywords = ["keyvalues", "vdf", "steam", "serde"]
categories.workspace = true
description = "(De)serialize VDF text with serde"
homepage = "https://github.com/CosmicHorrorDev/vdf-rs/tree/main/keyvalues-serde"
repository = "https://github.com/CosmicHorrorDev/vdf-rs"

[dependencies]
keyvalues-parser = { path = "../keyvalues-parser", version = "0.2.0" }
serde.workspace = true

[dev-dependencies]
divan.workspace = true
insta.workspace = true
pretty_assertions.workspace = true
serde = { workspace = true, features = ["derive"] }

[[bench]]
name = "ser_de"
harness = false

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(fuzzing)"]
